--- a/result summary/index.html
+++ b/result summary/index.html
@@ -25,14 +25,14 @@
                  <label>Summary</label>
 
                  <div id="box1"> 
-                    <img src="images/icon-reaction.svg"> <p id="text" style="color:hsl(0, 100%, 67%) ;">Reaction</p>
+                    <img src="icon-reaction.svg"> <p id="text" style="color:hsl(0, 100%, 67%) ;">Reaction</p>
                     <span class="score">
                         <p>80</p> / 100
                     </span>
                  </div>
 
                  <div id="box2"> 
-                    <img src="images/icon-memory.svg"> 
+                    <img src="icon-memory.svg"> 
                     <p id="text" style="color: hsl(39, 100%, 56%) ;"> Memory</p>
                     <span class="score">
                          <p>92</p>/ 100
@@ -40,7 +40,7 @@
                  </div> 
 
                  <div id="box3">
-                    <img src="images/icon-verbal.svg">
+                    <img src="icon-verbal.svg">
                      <p id="text" style="color:hsl(166, 100%, 37%) ;"> Verbal</p>
                      <span class="score">
                      <p>61</p>/ 100 
@@ -48,7 +48,7 @@
 
 
                  <div id="box4">
-                    <img src="images/icon-visual.svg"> 
+                    <img src="icon-visual.svg"> 
                     <p id="text" style="color: hsl(234, 85%, 45%);"> Visual</p>
                     <span class="score">
                      <p>72</p>/ 100 
